--- a/templates/layout.html
+++ b/templates/layout.html
@@ -146,38 +146,10 @@
     </div>
     <!-- End of nav-links -->
     <nav>
-    <!-- Formulários fora da navegação -->
-    <div class=" d-flex justify-content-end mx-5  ">
-        <ul class="navbar-nav d-flex flex-row me-5 ">
-            <li class="nav-item me-1 text-primary ">
-                <form action="#" method="post" class="text-white row justify-content-end">
-                    <select name="st" class="form-select text-primary">
-                        <option disabled selected>ST </option>
-                        <option value="San Francisco">BA</option>
-                        <option value="New York">SP</option>
-                        <option value="Seattle">GO</option>
-                        <option value="Los Angeles">AM</option>
-                        <option value="Chicago">SC</option>
-                    </select>
-                </form>
-            </li>
-            <li class="nav-item text-primary ">
-                <form action="#" method="post" class="text-white" style="width:30vw;">
-                    <select name="categoria" class="form-select text-primary">
-                        <option disabled selected>Categoria</option>
-                        <option value="San Francisco">Imóveis</option>
-                        <option value="New York">Automoveis</option>
-                        <option value="Seattle">Eletrodomesticos</option>
-                        <option value="Los Angeles">Moda e Beleza</option>
-                        <option value="Chicago">Esporte e lazer</option>
-                    </select>
-                </form>
-            </li>
-        </ul>
-    </div>
+    
 </nav>
  
-<main class="container-xxl  py-5 mb-4 mt-5 " >
+<main class="container-xxl" >
             {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
