--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="container-xxl d-flex flex-column">
+<div class="container-xxl d-flex flex-column custon-cardbody p-0 pt-0 ">
     <!-- Messages-->
     {% if error %}
         <div class="row justify-content-center">
@@ -27,12 +27,89 @@
         </div>
     {% endif %}
 
-    <p>Debug: {{ imagesDB }}</p>
-    {% for image_data in imagesDB %}
-        <img src="data:image/png;base64,{{ image_data['image_data'] }}" alt="">
-    {% endfor %}
+
+    <div id="carouselExampleIndicators" class="carousel slide pt-0 shadow-lg mt-0 " data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/static/assets/image/bannerhomeTV.jpg" class="img-fluid w-100 d-block rounded"  alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/assets/image/bannerTechhome.jpg" class="img-fluid w-100 d-block rounded" alt="..." >
+          </div>
+          <div class="carousel-item">
+            <img src="/static/assets/image/especifriqtv.jpg" class="img-fluid w-100 d-block rounded" alt="..." >
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     
-    
+      <div class="container-fluid">
+        <div class="row ">
+          <div class="col-12 col-lg-12 shadow-lg " >
+            <div class="row pt-2 pt-lg-4 pb-2 pb-lg-3">
+              <div class="card-group p-0 d-sm-flex justify-content-center "  >
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType ">
+                  <img src="/static/assets/image/icons8-houses-96.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-traffic-jam-96 (3).png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-lampshade-64 (1).png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-laptop-96.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-musical-notes-100.png" class="card-img-top img-fluid" alt="..." >
+  
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-toys-64.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-pets-100.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-office-100.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-fashion-100.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="card d-sm-flex rounded me-1 me-lg-4 ms-1 ms-lg-4 align-items-center bg-dark m-1 d-none d-sm-block custon__homeType">
+                  <img src="/static/assets/image/icons8-controller-100.png" class="card-img-top img-fluid" alt="..." >
+
+                </div>
+                <div class="shadow-sm border-1">
+
+                    <img src="/static/assets/image/carbanner.jpg" class="img-fluid w-100 pt-2 pt-lg-4 " alt="...">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     
     
 {% endblock %}
