--- a/templates/index.html
+++ b/templates/index.html
@@ -100,8 +100,77 @@
                   <img src="/static/assets/image/icons8-controller-100.png" class="card-img-top img-fluid" alt="..." >
 
                 </div>
+                <!-- CARROSEL-->
+                <div id="cardCarousel" class="carousel slide d-sm-none" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <!-- Primeiro conjunto de 3 itens -->
+                        <div class="carousel-item active">
+                            <div class="d-flex justify-content-center">
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-houses-96.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-traffic-jam-96 (3).png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-lampshade-64 (1).png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                
+                        <!-- Segundo conjunto de 3 itens -->
+                        <div class="carousel-item">
+                            <div class="d-flex justify-content-center">
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-laptop-96.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-musical-notes-100.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-toys-64.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                
+                        <!-- Terceiro conjunto -->
+                        <div class="carousel-item">
+                            <div class="d-flex justify-content-center">
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-pets-100.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-office-100.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-fashion-100.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                
+                        <!-- Quarto conjunto-->
+                        <div class="carousel-item">
+                            <div class="d-flex justify-content-center">
+                                <div class="card rounded me-3 me-lg-4 ms-3 ms-lg-4 align-items-center bg-dark m-1 d-flex custon__homeType">
+                                    <img src="/static/assets/image/icons8-controller-100.png" class="card-img-top img-fluid" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <!-- Navegação do carrossel -->
+                    <button class="carousel-control-prev" type="button" data-bs-target="#cardCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#cardCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                
+                <!---->
                 <div class="shadow-sm border-1">
-
                     <img src="/static/assets/image/carbanner.jpg" class="img-fluid w-100 pt-2 pt-lg-4 " alt="...">
                 </div>
               </div>
@@ -110,6 +179,14 @@
         </div>
       </div>
       
+      
+
+                
+
+         
+        
+    
+    
     
     
 {% endblock %}
