--- a/templates/layout.html
+++ b/templates/layout.html
@@ -149,7 +149,7 @@
     
 </nav>
  
-<main class="container-xxl" >
+<main class="container-xxl py-5 pt-5" >
             {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
