--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -36,7 +36,7 @@ body {
     height: 48px;
     width: 48px;
 }
-
+/*INDEX PAGE */
 .custon__homeType {
 
     overflow: hidden;
@@ -62,8 +62,30 @@ body {
     border-radius: 50%!important;
 }
 
+.announce_image {
+    height: 15rem;
+    width: 100%!important;
+}
 
 
+.img-wrapper {
+    display: inline-block;
+    overflow: hidden;
+}
+
+.img-wrapper img {
+    transition: transform 0.3s ease;
+    transform-origin: center top; 
+}
+
+.img-wrapper:hover img {
+    transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -o-transform: scale(1.5);
+}
+/*INDEX PAGE */
 
 /* Animation for the search icon on hover */
 .search-icon:hover svg {
@@ -193,7 +215,6 @@ body {
         left: 0!important;
         position: absolute;
         top: 0!important;
-  
         z-index: -1;
     }
 
